GNOME Bugzilla – Bug 762322
reapply does not restore IP configuration
Last modified: 2016-03-29 13:12:35 UTC
Activate a connection on a device and either - add an additional ip address/route with iproute2 - remove an ip address/route with iproute2 It is expected that a subsequent `nmcli device reapply $DEV` either restores the deleted item or removes the added item. That doesn't happen.
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.
for the record: fixed by https://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=2c2662f7724a4e74994359a34684947fac7c8bae