device: drop external changes on Reapply

https://bugzilla.gnome.org/show_bug.cgi?id=762322